# Howlingual

./: .env.example  .gitignore  .pnp.cjs  BUG_REPORT.md  BUG_REPORT_Supplemental.md  BUILD.md  DISTRIBUTION.md  Howlingual_plan.md  PROGRESS.md  README.md  REFACTORING_NOTES.md  audit_report_20260314.md  cerebras_qwen3_fix_20260131.md  check_model.py  extract_dict.py  generate_final_icons.py  generate_icon.py  generate_icon.sh  generate_icon_bottomleft.py  generate_icon_fixed.py  generate_icon_flush.py  generate_icon_simple.py  generate_squircle_icon.py  handover_fix_notes.md  implementation_roadmap.md  md.md  package-lock.json  package.json  refactor_log.md  refactor_summary_20260131.md  ui_mockup_review_request.md  update_20260201.md  update_20260201_models.md  update_20260201_stream_opt.md  update_20260204_cerebras_access_check.md  update_20260204_cerebras_stream_json.md  update_20260204_provider_direct.md  verify_inference.py  vite.config.js  修正内容.txt
.tmp/: ai_service_bundle_1769922290485.mjs  ai_service_bundle_1769926021541.mjs  ai_service_bundle_1770078241001.mjs  ai_service_bundle_1770181941410.mjs  ai_service_bundle_1770183171623.mjs  ai_service_bundle_1770184814341.mjs
_backup_20260128/: ai_service.ts  service_page.svelte
reports/: cerebras_ai_service_2026-02-04_04-57-48-320.json  cerebras_ai_service_2026-02-04_05-12-21-409.json  cerebras_ai_service_2026-02-04_05-32-51-622.json  cerebras_ai_service_2026-02-04_06-00-14-340.json  design_improvements.md  provider_test_2026-02-04_06-01-33-696.json  provider_test_2026-02-04_06-01-33-696.md  provider_test_app_2026-02-03_00-24-00-505.json  provider_test_app_2026-02-03_00-24-00-505.md  ux_issue_fixes.md
scripts/: create_cert.sh  (+6 more)
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build_output.txt  check_error.txt  compile_log.txt  logs_v2.txt  logs_v3.txt  logs_v4.txt  logs_v6.txt  logs_v7.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lib_old.rs  lib_old_utf8.rs  macos_ocr.rs  main.rs  ocr_engine.rs  ocr_flow.rs  ocr_native.rs  translation_backend.rs
(+28 files in other folders)
