[package]
name = "tauri-apphowlingual"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_apphowlingual_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.25"
rayon = "1.11.0"


[target."cfg(any(target_os = \"macos\", target_os = \"windows\", target_os = \"linux\"))".dependencies]
xcap = "0.8.1"


[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-global-shortcut = "2.3.1"
arboard = "3.6.1"
mouse_position = "0.1.4"

[target."cfg(windows)".dependencies]
windows = { version = "0.58.0", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Imaging",
    "Media_Ocr",
    "Globalization",
    "Graphics_Imaging",
    "Storage_Streams",
    "Win32_System_WinRT",
    "Foundation",
    "Foundation_Collections",
] }
ort = { version = "2.0.0-rc.11", features = ["ndarray"] }
ndarray = "0.17"


[target."cfg(target_os = \"macos\")".dependencies]
core-graphics = "0.22.3"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSArray", "NSData", "NSDictionary", "NSError", "NSString"] }
objc2-vision = { version = "0.2", features = ["VNRequestHandler", "VNRecognizeTextRequest", "VNRequest", "VNObservation"] }
